--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*{
+    font-family: 'Roboto', sans-serif;
+
+}
+
+body{
+    min-width: 500px;
+}
+
+h1{
+    @apply text-5xl font-bold
+}
